Pollus.Emscripten/WGPU/WGPUBrowserNative.cs

    [DllImport("__Internal_emscripten", EntryPoint = "wgpuShaderModuleReference")]
    extern public static unsafe void ShaderModuleReference(ShaderModule* shaderModule);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuShaderModuleRelease")]
    extern public static unsafe void ShaderModuleRelease(ShaderModule* shaderModule);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceConfigure")]
    extern public static unsafe void SurfaceConfigure(Surface* surface, SurfaceConfiguration* config);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceConfigure")]
    extern public static unsafe void SurfaceConfigure(Surface* surface, in SurfaceConfiguration config);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceGetCapabilities")]
    extern public static unsafe void SurfaceGetCapabilities(Surface* surface, Adapter* adapter, SurfaceCapabilities* capabilities);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceGetCapabilities")]
    extern public static unsafe void SurfaceGetCapabilities(Surface* surface, Adapter* adapter, ref SurfaceCapabilities capabilities);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceGetCurrentTexture")]
    extern public static unsafe void SurfaceGetCurrentTexture(Surface* surface, SurfaceTexture* surfaceTexture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceGetCurrentTexture")]
    extern public static unsafe void SurfaceGetCurrentTexture(Surface* surface, ref SurfaceTexture surfaceTexture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceGetPreferredFormat")]
    extern public static unsafe TextureFormat SurfaceGetPreferredFormat(Surface* surface, Adapter* adapter);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfacePresent")]
    extern public static unsafe void SurfacePresent(Surface* surface);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceUnconfigure")]
    extern public static unsafe void SurfaceUnconfigure(Surface* surface);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceReference")]
    extern public static unsafe void SurfaceReference(Surface* surface);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceRelease")]
    extern public static unsafe void SurfaceRelease(Surface* surface);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSurfaceCapabilitiesFreeMembers")]
    extern public static unsafe void SurfaceCapabilitiesFreeMembers(SurfaceCapabilities capabilities);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureCreateView")]
    extern public static unsafe TextureView* TextureCreateView(Texture* texture, TextureViewDescriptor* descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureCreateView")]
    extern public static unsafe TextureView* TextureCreateView(Texture* texture, in TextureViewDescriptor descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureDestroy")]
    extern public static unsafe void TextureDestroy(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureGetDepthOrArrayLayers")]
    extern public static unsafe uint TextureGetDepthOrArrayLayers(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureGetDimension")]
    extern public static unsafe TextureDimension TextureGetDimension(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureGetFormat")]
    extern public static unsafe TextureFormat TextureGetFormat(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureGetHeight")]
    extern public static unsafe uint TextureGetHeight(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureGetMipLevelCount")]
    extern public static unsafe uint TextureGetMipLevelCount(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureGetSampleCount")]
    extern public static unsafe uint TextureGetSampleCount(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureGetUsage")]
    extern public static unsafe TextureUsage TextureGetUsage(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureGetWidth")]
    extern public static unsafe uint TextureGetWidth(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureSetLabel")]
    extern public static unsafe void TextureSetLabel(Texture* texture, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureSetLabel")]
    extern public static unsafe void TextureSetLabel(Texture* texture, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureSetLabel")]
    extern public static unsafe void TextureSetLabel(Texture* texture, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureReference")]
    extern public static unsafe void TextureReference(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureRelease")]
    extern public static unsafe void TextureRelease(Texture* texture);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureViewSetLabel")]
    extern public static unsafe void TextureViewSetLabel(TextureView* textureView, byte* label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureViewSetLabel")]
    extern public static unsafe void TextureViewSetLabel(TextureView* textureView, in byte label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureViewSetLabel")]
    extern public static unsafe void TextureViewSetLabel(TextureView* textureView, [MarshalAs(UnmanagedType.LPUTF8Str)] string label);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureViewReference")]
    extern public static unsafe void TextureViewReference(TextureView* textureView);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuTextureViewRelease")]
    extern public static unsafe void TextureViewRelease(TextureView* textureView);

    [DllImport("__Internal_emscripten", EntryPoint = "wgpuDeviceCreateSwapChain")]
    extern public static unsafe WGPUSwapChain_Browser* DeviceCreateSwapChain(Device* device, Surface* surface, in WGPUSwapChainDescriptor_Browser descriptor);
    [DllImport("__Internal_emscripten", EntryPoint = "wgpuSwapChainGetCurrentTextureView")]
    extern public static unsafe TextureView* SwapChainGetCurrentTextureView(WGPUSwapChain_Browser* swapChain);
}
